--- a/Proiect-MTP/Proiect-MTP.csproj
+++ b/Proiect-MTP/Proiect-MTP.csproj
@@ -175,6 +175,7 @@
     <Content Include="PaginaPrincipala.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Recenzie.cs" />
     <Compile Include="CreateUser.cs" />
     <Compile Include="DetaliiFilm.aspx.cs">
       <DependentUpon>DetaliiFilm.aspx</DependentUpon>
